--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sidewalkify"
-version = "0.1.0"
+version = "0.2.1"
 description = "Command line tool and Python library for extrapolating sidewalk lines from annotated streets"
 authors = ["Nick Bolten <nbolten@gmail.com>"]
 license = "Apache-2.0"
@@ -15,6 +15,7 @@ networkx = "2.0"
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
 pre-commit = "^2.10.1"
+pytest = "^6.2.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
