Added pytest to commit and push actions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,10 @@ repos:
       entry: "poetry export --dev -f requirements.txt > requirements-dev.txt"
       language: system
       files: "pyproject.toml"
+    - id: pytest
+      name: pytest
+      language: system
+      entry: pytest
+      pass_filenames: false
+      always_run: true
+      stages: [commit, push]
