--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,17 +11,20 @@ repos:
       name: export_setup_py
       entry: "poetry run python ./create_setup.py"
       language: system
-      files: "./pyproject.toml"
+      files: "^pyproject.toml$"
+      pass_filenames: false
     - id: export_requirements
       name: export_requirements
-      entry: "poetry export -f requirements.txt > requirements.txt"
+      entry: "poetry export -f requirements.txt --output requirements.txt"
       language: system
-      files: "pyproject.toml"
+      files: "^pyproject.toml$"
+      pass_filenames: false
     - id: export_dev_requirements
       name: export_dev_requirements
-      entry: "poetry export --dev -f requirements.txt > requirements-dev.txt"
+      entry: "poetry export --dev -f requirements.txt --output requirements-dev.txt"
       language: system
-      files: "pyproject.toml"
+      files: "^pyproject.toml$"
+      pass_filenames: false
     - id: pytest
       name: pytest
       language: system
