--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.6.1"
 click = "7.1.2"
 geopandas = "0.3.0"
 shapely = "1.7.1"
-networkx = "2.0"
+networkx = "^2.0"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
