--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0"
 [tool.poetry.dependencies]
 python = "^3.6.1"
 click = "7.1.2"
-geopandas = "0.3.0"
+geopandas = "^0.8.0"
 shapely = "1.7.1"
 networkx = "^2.0"
 
