--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "Apache-2.0"
 sidewalkify = "sidewalkify.cli:sidewalkify"
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = "^3.7.1"
 click = "7.1.2"
 geopandas = "^0.8.0"
 shapely = "1.7.1"
@@ -19,6 +19,23 @@ networkx = "^2.0"
 black = "^20.8b1"
 pre-commit = "^2.10.1"
 pytest = "^6.2.2"
+mypy = "^0.910"
+types-click = "^7.1.2"
+
+[tool.black]
+line-length = 79
+exclude = """
+(
+  setup.py
+)
+"""
+
+[tool.mypy]
+ignore_missing_imports = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
 
 [build-system]
 requires = ["poetry>=0.12"]
